# Myspace

.devcontainer/: devcontainer.json
Healthcare study/Barra收益归因分析/A-share/momentum_dashboard/: .gitignore  README.md  backtest_groups.py  build_snapshot.py  factor_research.py  requirements.txt  return_model_research.py  streamlit_app.py  test_survivorship_free_risk_model.py  update_earnings_calendar.py  update_prices.py  validate_market_cap_hypothesis.py
Healthcare study/Barra收益归因分析/A-share/momentum_dashboard/.streamlit/: config.toml
Healthcare study/Barra收益归因分析/A-share/momentum_dashboard/data/: factor_decile_returns.csv  factor_research_metadata.json  factor_research_summary.csv  (+36 more)
edgar-financial-exporter/: .env.example  .gitignore  README.md  pyproject.toml
edgar-financial-exporter/src/edgar_exporter/: __init__.py  cik_lookup.py  cli.py  company_facts.py  config.py  data_quality.py  excel_writer.py  fact_filter.py  sec_client.py  statement_builder.py  statement_mappings.py  utils.py
edgar-financial-exporter/tests/: test_cik_lookup.py  test_data_quality.py  test_excel_writer.py  test_fact_filter.py  test_statement_builder.py
fred-macro-dashboard/: .env.example  .gitignore  README.md  app.py  config.py  fetch.py  requirements.txt  transform.py
fred-macro-dashboard/tests/: test_transform.py
stock-news-aggregator/: .env.example  .gitignore  README.md  crontab.example  requirements.txt  run.py
stock-news-aggregator/news_aggregator/: __init__.py  cli.py  config.py  db.py  fetcher.py  models.py  newsapi_source.py  pipeline.py  ranking.py  report.py  scheduler.py
